Fix horizontal scroll

--- a/src/styles/blocks/explore-online.scss
+++ b/src/styles/blocks/explore-online.scss
@@ -26,12 +26,10 @@
   }
 
   &__title {
-    margin-bottom: 4px;
+    margin: 0 -1em 4px;
     font-size: 24px;
     line-height: 140%;
     font-weight: 700;
-    margin-left: -100%;
-    margin-right: -100%;
     white-space: nowrap;
     text-align: center;
     color: $accent-color;
